tests/ast_interpreter/err_list_index_not_int.expected
<string>:3:11: error: index must be an integer
    print(list["hello"]);
          ^^^^^^^^^^^^^
